tests/idris2/misc/unification004/expected
1/1: Building Good (Good.idr)
1/1: Building Bad (Bad.idr)
Error: While processing left hand side of foo. When unifying:
    View W
and:
    View ?a
Pattern variable a unifies with: ().

Bad:3:5--3:11
 1 | U : Unit
 2 | 
 3 | W = MkUnit
         ^^^^^^


Bad:10:7--10:8
 06 |   X : View W
 07 |   Y : View U
 08 | 
 09 | foo : (v : Unit) -> View v -> Unit
 10 | foo a X = MkUnit
            ^

Suggestion: Use the same name for both pattern variables, since they unify.
